# databricks_reference_app

./: .gitignore  initial_table_setup.py  initialize_reference_tables.py  schema_name_reference_tables_meta_data_yyyymmdd.csv  schema_name_reference_tables_table_config_yyyymmdd.csv
.azure/devops-pipelines/: README.md  azure-pipelines.yml  deploy_databricks_app.sh  install_databricks_cli.sh
.azure/devops-pipelines/templates/: deploy-databricks-app-stage.yml
app_project_V1/: .gitignore  README.md  app.py  app.yaml  deploy.sh  pyproject.toml  requirements.txt
app_project_V1/config/: constants.py  metadata.py  runtime.py  setup.py
app_project_V1/docs/: architecture.md  configuration.md  deployment.md  troubleshooting.md
app_project_V1/docs/features/: data-entry-and-versioning.md  review-and-approval.md
app_project_V1/styles/: styles.py
app_project_V1/typings/: __builtins__.pyi
app_project_V1/ui/: actions.py  data_viewer.py  hero.py  review_panel.py  sidebar.py
app_project_V1/utils/: data_utils.py  review_utils.py  sql_utils.py  validation_utils.py
docs/: getting-started.md  operations.md
docs/reference/: table-properties.md
